Add what makes Mabel happy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Doggie</h1>
 
-    <p>Hello my name is Uni</p>
+    <p>Hello! my name is Mabel</p>
+
+    <p>I like to go on walks</p>
+
 
 </body>
 </html>
